...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_new_user_username"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.382" />

    <EditText
        android:id="@+id/edittext_new_user_email"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_user_username"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/edittext_new_user_password"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_user_email"
        app:layout_constraintVertical_bias="0.066" />

    <EditText
        android:id="@+id/edittext_new_user_password2"
        android:layout_width="320dp"
        android:layout_height="44dp"
        android:ems="10"
        android:hint="Re-type password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
...
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_new_user_password"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/btn_register_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign up"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
...
